src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParameters_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParameters_StringErrorContext.class */
public final class ARBIndirectParameters_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirectCountARB(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawArraysIndirectCountARB(ILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawArraysIndirectCountARB(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawArraysIndirectCountARB(ILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("nglMultiDrawElementsIndirectCountARB(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawElementsIndirectCountARB(IILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawElementsIndirectCountARB(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawElementsIndirectCountARB(IILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawArraysIndirectCountARB(I[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        methods.put("glMultiDrawElementsIndirectCountARB(II[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBIndirectParametersErrorContext");
        return methods;
    }
}
